--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pro web Hero</title>
+    <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/themes/default/default.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="src/themes/light/light.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="src/themes/dark/dark.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="src/themes/bar/bar.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="src/css/nivo-slider.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="wrapper">
@@ -18,8 +24,8 @@
         <nav>
             <div id="nav">
                 <ul>
-                    <li><a href="#">Menu Item</a></li>
-                    <li><a href="#">Menu Item</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="inside.html">Blog</a></li>
                     <li><a href="#">Menu Item</a></li>
                     <li><a href="#">Link Item &raquo;</a>
                         <ul>
@@ -46,8 +52,15 @@
             </div>
         </nav>
         <section>
-            <div id="slider">
-                <img src="src/images/prowebhero1.jpg" alt="">
+            <div id="sliderWrapper">
+                <div class="slider-wrapper theme-bar">
+                    <div id="slider" class="nivoSlider">
+                        <img src="src/images/toystory.jpg"/>
+                        <img src="src/images/up.jpg" />
+                        <img src="src/images/walle.jpg" />
+                        <img src="src/images/nemo.jpg" />
+                    </div>
+                </div>
             </div>
         </section>
         <div id="contentWrapper">
@@ -76,6 +89,14 @@
                 <p>&copy; All Right Reseved by - prowebHero.com</p>
             </div>
         </footer>
+
+        <script type="text/javascript" src="src/js/jquery-1.9.0.min.js"></script>
+        <script type="text/javascript" src="src/js/jquery.nivo.slider.js"></script>
+        <script type="text/javascript">
+            $(window).load(function () {
+                $('#slider').nivoSlider();
+            });
+        </script>
     </div>
 </body>
 </html>
