--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+    <ul id="socialArea">
+        <li><a href="#"><img src="src/images/facebook.png" alt=""></a></li>
+        <li><a href="#"><img src="src/images/gplus.png" alt=""></a></li>
+        <li><a href="#"><img src="src/images/youtube.png" alt=""></a></li>
+        <li><a href="#"><img src="src/images/linkedin.png" alt=""></a></li>
+        <li><a href="#"><img src="src/images/twitter.png" alt=""></a></li>
+    </ul>
     <div class="mainWrap headerBg">
         <div class="wrap">
             <header>
