--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>pro web Hero</title>
     <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
@@ -13,6 +14,8 @@
     <link rel="stylesheet" href="src/themes/bar/bar.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="src/css/nivo-slider.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
+    <script src="src/js/responsive-menu.js"></script>
 </head>
 
 <body>
@@ -39,7 +42,7 @@
         <div class="wrap">
             <nav>
                 <div id="nav">
-                    <ul>
+                    <ul id="mainManu">
                         <li><a href="#">Home</a></li>
                         <li><a href="inside.html">Blog</a></li>
                         <li><a href="#">Menu Item</a></li>
@@ -321,6 +324,14 @@
 
     <script type="text/javascript" src="src/js/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="src/js/jquery.nivo.slider.js"></script>
+    <script>
+        domready(function () {
+            selectnav('mainManu', {
+                label: '*** Click to Select Menu *** '
+            });
+            prettyPrint()
+        })
+    </script>
     <script type="text/javascript">
         $(window).load(function () {
             $('#slider').nivoSlider();
